# cen429-2025-2026-53-binnur-altinisik-cpp

./: 10-generate-coverage-linux.sh  10-generate-coverage-windows.bat  7-build-app-windows.bat  7-build-doc-windows.bat  8-build-test-windows.bat  9-clean-project.bat  CMakeLists.txt  DoxyfileLibWin  DoxyfileTestWin  README.md  travelexpense_tests_unit_win.cov
build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  testResults_windows.html  testResults_windows.xml  travelexpenseapp.sln
build_win/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  googletest-distribution.sln
data/: test_travelexpense.db  travelexpense.db
docs/: API_SECURITY.md  ASSET_MANAGEMENT.md  CMake_CACHE_HATASI_COZUMU.md  DYNAMIC_ASSETS_PROTECTION.md  FINAL_REPORT.md  LINKER_HATASI_COZUMU.md  MEVCUT_DURUM_ANALIZI.md  MIGRATION_KULLANIM.md  OWASP_COMPLIANCE.md  PENETRATION_TEST_PLAN.md  PROJECT_PLAN.md  REQUIREMENTS_CHECKLIST.md  REQUIREMENTS_COMPLIANCE_REPORT.md  SECURITY_ANALYSIS.md  SECURITY_CERTIFICATION.md  SECURITY_STANDARDS_COMPLIANCE.md  SOFTHSM_SETUP.md  SQLITE_SETUP.md  STATIC_ASSETS_PROTECTION.md  TEST_COVERAGE_ANALYSIS.md  TLS_SECURITY.md  VIZE_DURUM_OZETI.md  VIZE_ILERLEME_RAPORU.md  architecture.md  index.md  security.md
docs/coverxygenlibwin/: C__Users_x_user_Desktop_cen429_2025_2026_53_binnur_altinisik_cpp_src_travelexpense_header_tls.h.html  C__Users_x_user_Desktop_cen429_2025_2026_53_binnur_altinisik_cpp_src_travelexpense_src_rasp.cpp.html  C__Users_x_user_Desktop_cen429_2025_2026_53_binnur_altinisik_cpp_src_travelexpense_src_tls.cpp.html  C__Users_x_user_Desktop_cen429_2025_2026_53_binnur_cpp_src_travelexpense_header_database.h.html  C__Users_x_user_Desktop_cen429_2025_2026_53_binnur_cpp_src_travelexpense_header_security.h.html  C__Users_x_user_Desktop_cen429_2025_2026_53_binnur_cpp_src_travelexpense_header_userAuth.h.html  C__Users_x_user_Desktop_cen429_2025_2026_53_binnur_cpp_src_travelexpense_src_migration.cpp.html  C__Users_x_user_Desktop_cen429_2025_2026_53_binnur_src_travelexpense_header_assetManager.h.html  C__Users_x_user_Desktop_cen429_2025_2026_53_binnur_src_travelexpense_src_budgetManager.cpp.html  C__Users_x_user_Desktop_cen429_2025_2026_53_binnur_src_travelexpense_src_codehardening.cpp.html  C__Users_x_user_Desktop_cen429_2025_2026_53_binnur_src_travelexpense_src_travelexpense.cpp.html  C__Users_x_user_Desktop_cen429_2025_2026_53_binnurc_travelexpense_header_reportGenerator.h.html  C__Users_x_user_Desktop_cen429_2025_2026_53_binnurcpp_src_travelexpense_header_migration.h.html  C__Users_x_user_Desktop_cen429_2025_2026_53_binnurcpp_src_travelexpense_src_encryption.cpp.html  (+32 more)
docs/coverxygentestwin/: index.htm  index.html  main.js  (+2 more)
report_doc_lib_hist_win/: 2025-11-18_15-13-12_CoverageHistory.xml  2025-11-18_15-15-46_CoverageHistory.xml  2025-11-18_18-06-38_CoverageHistory.xml  2025-11-18_18-10-10_CoverageHistory.xml  2025-11-18_18-14-07_CoverageHistory.xml  2025-11-18_18-16-18_CoverageHistory.xml  2025-11-18_18-20-00_CoverageHistory.xml  2025-11-19_20-42-34_CoverageHistory.xml  2025-11-19_20-46-43_CoverageHistory.xml  2025-11-19_20-50-54_CoverageHistory.xml  2025-11-19_20-54-19_CoverageHistory.xml  2025-11-19_20-57-18_CoverageHistory.xml  2025-11-19_21-00-33_CoverageHistory.xml  2025-11-19_21-04-56_CoverageHistory.xml  2025-11-19_21-08-05_CoverageHistory.xml  2025-11-19_21-10-46_CoverageHistory.xml  2025-11-19_21-13-33_CoverageHistory.xml  2025-11-19_21-16-22_CoverageHistory.xml  2025-11-19_21-19-23_CoverageHistory.xml  2025-11-19_21-20-56_CoverageHistory.xml  2025-11-19_22-04-55_CoverageHistory.xml
report_doc_test_hist_win/: 2025-11-18_15-13-15_CoverageHistory.xml  2025-11-18_15-15-48_CoverageHistory.xml  2025-11-18_18-06-43_CoverageHistory.xml  2025-11-18_18-10-13_CoverageHistory.xml  2025-11-18_18-14-14_CoverageHistory.xml  2025-11-18_18-16-24_CoverageHistory.xml  2025-11-18_18-20-04_CoverageHistory.xml  2025-11-19_20-42-38_CoverageHistory.xml  2025-11-19_20-46-44_CoverageHistory.xml  2025-11-19_20-50-55_CoverageHistory.xml  2025-11-19_20-54-21_CoverageHistory.xml  2025-11-19_20-57-20_CoverageHistory.xml  2025-11-19_21-00-34_CoverageHistory.xml  2025-11-19_21-04-58_CoverageHistory.xml  2025-11-19_21-08-07_CoverageHistory.xml  2025-11-19_21-10-48_CoverageHistory.xml  2025-11-19_21-13-34_CoverageHistory.xml  2025-11-19_21-16-23_CoverageHistory.xml  2025-11-19_21-19-25_CoverageHistory.xml  2025-11-19_21-20-57_CoverageHistory.xml  2025-11-19_22-04-57_CoverageHistory.xml
src/tests/travelexpense/: CMakeLists.txt  travelexpense_test.cpp  travelexpense_test.cpp.orig
src/travelexpense/: CMakeLists.txt
src/travelexpense/header/: assetManager.h  assetManager.h.orig  budgetManager.h  budgetManager.h.orig  codehardening.h  codehardening.h.orig  commonTypes.h  commonTypes.h.orig  database.h  database.h.orig  encryption.h  error_codes.h  error_codes.h.orig  expenseManager.h  expenseManager.h.orig  export.h  export.h.orig  fileIO.h  fileIO.h.orig  fingerprinting.h  fingerprinting.h.orig  helpers.h  helpers.h.orig  migration.h  migration.h.orig  rasp.h  rasp.h.orig  reportGenerator.h  reportGenerator.h.orig  safe_string.h  safe_string.h.orig  security.h  security.h.orig  sessionManager.h  sessionManager.h.orig  softhsm.h  tls.h  tls.h.orig  travelexpense.h  travelexpense.h.orig  (+4 more)
src/travelexpense/src/: assetManager.cpp.orig  budgetManager.cpp  budgetManager.cpp.orig  codehardening.cpp  codehardening.cpp.orig  database.cpp  database.cpp.orig  encryption.cpp  encryption.cpp.orig  expenseManager.cpp  expenseManager.cpp.orig  fileIO.cpp  fileIO.cpp.orig  fingerprinting.cpp  helpers.cpp.orig  migration.cpp  migration.cpp.orig  rasp.cpp  rasp.cpp.orig  reportGenerator.cpp  security.cpp  sessionManager.cpp  softhsm.cpp  softhsm.cpp.orig  tls.cpp  travelexpense.cpp  travelexpense.cpp.orig  tripManager.cpp  tripManager.cpp.orig  userAuth.cpp  userAuth.cpp.orig
(+781 files in other folders)
